fixing filter by styles on mobile

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -78,7 +78,11 @@ ul {
 
 @media (max-width: $maxTabletWidth) {
   .filter-bar {
-    padding: 32px 16px 0;
+    padding: 0px 16px 0;
+    flex-direction: column;
+    .filter-bar-item {
+      margin-top: 16px;
+    }
   }
   .app-content {
     padding: 16px 0;
